# ptd.dev

./: .gitignore  .rspec  .rubocop.yml  AGENTS.md  Cargo.toml  DEPLOYMENT.md  Gemfile  README.md  config.ru  generate_logo.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-automerge.yml
.opencode/agent/: ruby-dev.md  rust-transpiler.md
.opencode/command/: setup.md  transpile.md
content/blog/: 20250915164001_rust-is-the-new-assembly.md
content/docs/getting-started/: quick-start.md
content/docs/guides/: ptd-concepts.md
content/docs/reference/: performance.md
content/pages/: about.html  contact.html  home.html
docs/base/: PERFORMANCE.md  performance.md  ptd-paradigm.md
docs/guides/: getting-started.md
public/: manifest.json  sw.js
spec/: app_spec.rb  pages_functionality_spec.rb  server_pages_spec.rb  server_routing_spec.rb  spec_helper.rb
spec/commands/: benchmark_spec.rb  hello_spec.rb  hello_test.rs  version_spec.rb
spec/ruby/: benchmark_spec.rb  file_handler_spec.rb  hello_spec.rb  logger_spec.rb  version_spec.rb
spec/utils/: content_manager_spec.rb  file_handler_spec.rb  logger_spec.rb  markdown_renderer_spec.rb
src/: cli.rb  cli.rs  server.rb
src/commands/: benchmark.rb  benchmark.rs  hello.rb  hello.rs  version.rb  version.rs
src/rust/: main.rs
src/rust/commands/: benchmark.rs  hello.rs  (+2 more)
src/utils/: content_manager.rb  file_handler.rb  file_handler.rs  logger.rb  logger.rs  markdown_renderer.rb
views/: blog_index.erb  blog_post.erb  docs_index.erb  documentation.erb  error.erb  layout.erb  not_found.erb  page.erb
(+3 files in other folders)
