[package]
name = "ptd-ruby-cli"
version = "1.0.0"
edition = "2021"
authors = ["PTD Team"]
description = "PTD Ruby CLI - Rust Version"
repository = "https://github.com/ai-ptd-dev/ptd-ruby-cli"

[[bin]]
name = "ptd-rust"
path = "src/rust/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
csv = "1.3"
chrono = "0.4"
colored = "2.1"
tempfile = "3.8"
sha2 = "0.10"
md5 = "0.7"
sha1 = "0.10"
indicatif = "0.17"
atty = "0.2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
pretty_assertions = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true